<resources>
    <string name="app_name">Lab Test 2</string>
    <string name="next_btn">Next</string>
    <string name="topic_Text">Know your mind</string>
    <string name="skip_btn1">Skip</string>
    <string name="onBoard1_des">Monitor your mental health daily.
Control the mind knowing your level.</string>
    <string name="next_btn2">Next</string>
    <string name="onBoard2_Topic">We are with you</string>
    <string name="topic_Text2">You are not alone</string>
    <string name="onBoard2_des">Nowadays, many people suffer from mental disorders. MoodMonitor helps reduce stress.</string>
    <string name="skip_btn2">Skip</string>
    <string name="next_btn3">Next</string>
    <string name="onBoard3_Topic">Get lots of valuables</string>
    <string name="onBoard3_des">We provide many resources to you. Take the test and know your level.Watch the video provided and relax your mind. If necessary, get help from professionals.</string>
    <string name="getstart">Get Started</string>
    <string name="signUp">Signup</string>
    <string name="signUp_des">Create a new account</string>
    <string name="NameInput">"  Name"</string>
    <string name="EmailInput">"  Email"</string>
    <string name="pwInput">"  Password"</string>
    <string name="nameHint">"  Name"</string>
    <string name="emailHint">"  Email"</string>
    <string name="hintPW">"  Password"</string>
    <string name="createAcc">Create Account</string>
    <string name="welcome">Welcome !</string>
    <string name="mail">" yashi@gmail.com"</string>
    <string name="password">" ......"</string>
    <string name="frogot">frogot password ?</string>
    <string name="login">Login</string>
    <string name="backToSignUp">"You don’t have an account ? "</string>
    <string name="signup">Signup</string>
    <string name="hometopic">Get help for your life...</string>
    <string name="start_test">Start test</string>
    <string name="report">Report</string>
    <string name="videos">Videos</string>
    <string name="prof_details">Professionls \ndetails</string>
    <string name="add">+</string>
    <string name="home_app_name">MoodMonitor,</string>
    <string name="test_start">Start Test</string>
    <string name="all">ALL</string>
    <string name="popular">POPULAR TEST</string>
    <string name="smoke">Smoke\naddiction</string>
    <string name="sexual">Sexual</string>
    <string name="suicidality">Suicidality</string>
    <string name="depression">Depression</string>
    <string name="personality">Personality</string>
    <string name="alcohol">Addiction to \nalcohol</string>
    <string name="love">Love failure</string>
    <string name="eating">Eating problems</string>
    <string name="repo">Report</string>
    <string name="prof">Professionals Help</string>
    <string name="dlt">Delete All</string>
    <string name="video">Videos</string>
    <string name="videopage">Video for smoke addiction</string>
    <string name="videopage1">Video for Depression</string>
    <string name="videopage2">Video for smoke addiction</string>
    <string name="videopage4">Video for Suicidality</string>
    <string name="my_account">My Account</string>
    <string name="user_name" />
    <string name="phone">+94 75445443</string>
    <string name="profile_topic">Your Progress</string>
    <string name="logout"><![CDATA[Log out   >]]></string>

</resources>

