<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_MA4"
    tools:context=".MainActivity6">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView2"
        android:layout_width="333dp"
        android:layout_height="539dp"
        android:layout_marginTop="60dp"
        android:background="@color/container1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="293dp"
                android:layout_height="230dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/login" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="133dp"
                android:layout_height="45dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/orienta"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="277dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@color/input"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="277dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/input"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/frogot"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.165"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <Button
        android:id="@+id/btn8"
        android:layout_width="167dp"
        android:layout_height="58dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/startBtn_color"
        android:fontFamily="@font/belgrano"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="30dp"
        android:text="@string/backToSignUp"
        android:textColor="@color/btn_Tcolor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="56dp"
        android:text="@string/signup"
        android:textColor="@color/btn_Tcolor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

</androidx.constraintlayout.widget.ConstraintLayout>