<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/skip_btn2"
        android:fontFamily="@font/belgrano"
        android:text="@string/skip_btn2"
        android:textColor="@color/skip2_Tcolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/next_btn3"
        android:fontFamily="@font/belgrano"
        android:text="@string/next_btn3"
        android:textColor="@color/next3_Tcolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/onBoard2Topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/orienta"
        android:text="@string/onBoard2_Topic"
        android:textColor="@color/onBoard2_topic"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="353dp"
        android:layout_height="89dp"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/alice"
        android:text="@string/onBoard2_des"
        android:textAlignment="center"
        android:textColor="@color/onboard2_des"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar2" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar2"
        android:layout_width="396dp"
        android:layout_height="290dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="7dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="8dp"
        app:backgroundTint="@color/container1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="398dp"
        android:layout_height="256dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar2"
        app:srcCompat="@drawable/on3" />
</androidx.constraintlayout.widget.ConstraintLayout>