<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="98dp"
        android:backgroundTint="@color/next_btn2"
        android:fontFamily="@font/belgrano"
        android:text="@string/next_btn2"
        android:textColor="@color/next2_Tcolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="112dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="98dp"
        android:backgroundTint="@color/skip_btn1"
        android:fontFamily="@font/belgrano"
        android:text="@string/skip_btn2"
        android:textColor="@color/skip1_Tcolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="339dp"
        android:layout_height="97dp"
        android:layout_marginTop="148dp"
        android:fontFamily="@font/alice"
        android:text="@string/onBoard1_des"
        android:textAlignment="center"
        android:textColor="@color/onBoard1_dse"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="396dp"
        android:layout_height="290dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="36dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="38dp"
        app:backgroundTint="@color/container1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="93dp"
        android:fontFamily="@font/orienta"
        android:text="@string/topic_Text"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar"
        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="381dp"
        android:layout_height="254dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar"
        app:srcCompat="@drawable/on2" />

</androidx.constraintlayout.widget.ConstraintLayout>