<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_MA5"
    tools:context=".MainActivity5">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="337dp"
        android:layout_height="541dp"
        android:layout_marginTop="54dp"
        android:background="@color/container1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="539dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="317dp"
                android:layout_height="212dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/signup" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/orienta"
                android:text="@string/signUp"
                android:textColor="@color/signUpText"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.132"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/signUp_des"
                android:textColor="@color/signUp_des"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.175"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/editTextText9"
                android:layout_width="277dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@color/input"
                android:ems="10"
                android:hint="@string/nameHint"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/editTextText10"
                android:layout_width="277dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/input"
                android:ems="10"
                android:hint="@string/emailHint"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText9"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/editTextText11"
                android:layout_width="277dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/input"
                android:ems="10"
                android:hint="@string/hintPW"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText10"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <Button
        android:id="@+id/btn7"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#5E35FF"
        android:fontFamily="@font/belgrano"
        android:text="@string/createAcc"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView" />

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="20dp"
                android:text="All ready have an account ? "
                android:textAlignment="center"
                android:textColor="@color/btn_Tcolor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/logText"
                android:layout_width="62dp"
                android:layout_height="38dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="48dp"
                android:text="Login"
                android:textAlignment="center"
                android:textColor="@color/btn_Tcolor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.178"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>